# ms-matching

./: .gitignore  pyproject.toml  pytest.ini
data/testdata/highres/: 99990_586_EXP_100ngHeLa_200nl_Jan9_32093.ms2  99990_586_EXP_100ngHeLa_200nl_Jan9_52574.ms2  99990_586_EXP_100ngHeLa_200nl_Jan9_58974.ms2  99990_586_EXP_100ngHeLa_200nl_Jan9_75726.ms2  99990_586_EXP_100ngHeLa_200nl_Jan9_91151.ms2
data/testdata/lowres/: 99995_568_MSPCL_Hela_100ng_Apr06_21379.ms2  99995_568_MSPCL_Hela_100ng_Apr06_9966.ms2
src/ms_matching/: cli.py  db.py  digest.py  driver.py  io.py  match.py  read_config.py
tests/integration/: test_driver.py
tests/unit/: test_db.py  test_digest.py  test_match.py  test_read_config.py
