[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "ms_matching"
version = "0.1.0"
description = "A Python package for monitoring disk activity."
authors = [{ name = "Your Name", email = "your.email@example.com" }]
license = { file = "LICENSE" }
readme = "README.md"
dependencies = [
    "pyteomics",  
]
requires-python = ">=3.8"

[project.scripts]
ms-matching = "ms_matching.cli:main"


[tool.setuptools]
packages = ["ms_matching", ]
package-dir = { "" = "src" }

[tool.pyright]
include = ["src"]
exclude = ["tests", "**/__pycache__"]
strict = false
# pythonVersion = "3.8"

[tool.mypy]
ignore_missing_imports = true

[tool.black]
line-length = 88

